# YORPLib

./: CMakeLists.txt  LICENSE.md  README.md  Spacecraft_SRP.1  YORPLibConfig.cmake  input_use1.txt
Example/: CMakeLists.txt  input_use1.txt  main.cpp  test.cmake
Example/cmake/: FindOmpGcc.cmake
Test/: CMakeLists.txt  input_use1.txt  main.cpp
YORPLib/: CMakeLists.txt
YORPLib/YORPLib/CMake/: YORPLibConfig.cmake
YORPLib/include/: Body.h  SRPModel.h  VoxelGrid.h
YORPLib/source/: Body.cpp  Facet.cpp  SRPModel.cpp  VoxelGrid.cpp
include/: Body.h  FCoeffs.h  Facet.h  SRPModel.h  Shadow.h  VoxelGrid.h
lib/: CMakeLists.txt  YORPLibConfig.cmake
lib/include/: Body.h  Facet.h  SRPModel.h  VoxelGrid.h
lib/source/: Body.cpp  FCoeffs.cpp  Facet.cpp  SRPModel.cpp  Shadow.cpp  VoxelGrid.cpp
misc/: Body.cpp.old  FCoeffs.cpp.old.H10only  FCoeffs.cpp.old.NoRefineLongitude  SRPModel.cpp.old  SRPModel.h.old
share/YORPLib/CMake/: YORPLibConfig.cmake
source/: Body.cpp  FCoeffs.cpp  Facet.cpp  SRPModel.cpp  Shadow.cpp  VoxelGrid.cpp  main.cpp
